 13. Wish now has a one rl-day cool-down.
 14. Siplet now supports ANSI-256
 15. New Scriptable command: MPCASTEXT
 16. New MOB class: GenRideableUndead, with Raise Undead support in prayers.
 17. New internal property: ExtraData, for attaching random data to specific objects.
 18. New common skills: Master Dyeing, and Master Lacquering
 19. Players >= last player level no longer gain experience.

# Build 5.9.8 Release 4/8/2019
  1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
  2. New wainwrighting & smelting recipes
  3. Longlook to mobs now shows interesting body part info.
  4. Combining BRIEF and COMPRESS now results in SUPERBRIEF!
  5. Added new GMODIFY fields: RESOURCE (string substitute for MATERIAL), and MATERIALTYPE
  6. New standard races: Pegasus, Pegacorn
  7. Improvements to glassblowing and boatwright recipes.
  8. Journal messages can now be forwarded to the senders game mailbox, even if smtp server isn't running.
  9. Can now use CREATE A CAT/COW to quickly generate a GenMOB of a particular race.
  10. Items in npc mob inventory can now be set to populate only at boot time.
  11. Private property left untampered for mud-months will get increasingly "Dusty". Use CLEAN.
  12. Channel backlogs can now be managed from the Journal Browser in the MUDGrinder
  13. New Achievement Award: NOPURGE -- for protecting players from auto-purge.
  14. New Spell: Prestidigitation
  15. New parameter to the Prop_*SpellCast properties for setting ticks on some spells only.
  16. Material type for Precious Stones (Diamonds, Gems, etc) given new friendly name of "Gemstone"
  17. <VARIES> tags in room descriptions now includes a Zappermask option -- see the Archon's Guide.
  18. Journal entries, including those with embedded replies, can be edited from the MUDGrinder.
  19. MUDGRinder: Mobs can now be added and edited directly in ShopKeeper inventory